node article updated

--- a/_posts/2024-10-22-Node.md
+++ b/_posts/2024-10-22-Node.md
@@ -9,3 +9,19 @@ image: /assets/uploads/node.jpg
 As an aspiring Node.js developer, I am initially focusing on the theoretical foundations of Node.js to build a strong understanding of its core concepts. I am diving into its event-driven architecture and non-blocking I/O model, which are essential for developing scalable and efficient web applications.
 
 My goal is to leverage Node.js to create robust applications that enhance user experiences while continuously learning and adapting to the ever-evolving landscape of web development.
+
+
+**Node JS** 
+Node JS is usec for server-side programming, and primarily deployed for non-blocking, event-driven servers, such as traditional web sites and back-end API services
+
+In this blog I will try to explain all these topics in a very simple manner,
+
+**Modules**
+**v8 JS Engine**
+**Async IO**
+**Event Loop**
+**LibUV**
+**ThreadPool**
+**Serve**
+**Database**
+
